added unit tests for article service
