# articles-service/internal/controllers/article.go
@@ -41,36 +41,26 @@ func InitArticleController(
 	return articleController
 }
 
-// @Summary Создание объявления
-// @Tags articles
-// @Accept json
-// @Produce json
-// @Param article body models.Article true "Объявление"
-// @Success 201 {int} id
-// @Failure 400 {string} string "Barticle Request"
-// @Failure 500 {string} string "Internal Server Error"
-// @Router			/article/create/ [post]
+// @Summary	Создание объявления
+// @Tags		articles
+// @Accept		json
+// @Produce	json
+// @Param		article	body		models.Article	true	"Объявление"
+// @Success	201		{int}		id
+// @Failure	400		{string}	string	"Barticle Request"
+// @Failure	500		{string}	string	"Internal Server Error"
+// @Router		/article/create/ [post]
 func (h *articleController) Create(c *gin.Context) {
 	go metrics.CreateArticleRequest.Inc()
 	// проверяем наличие ошибки, возможно переданной нам через middleware
-	if v, ok := c.Value(types.KeyError).(error); ok {
-		if v != nil {
-			c.JSON(http.StatusBadRequest, gin.H{"error": v.Error()})
-			return
-		}
+	if err, ok := c.Value(types.KeyError).(error); ok && err != nil {
+		utils.ErrorLog("get error from context", err)
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
 	}
 
-	var err error
-	defer func() {
-		if err == nil {
-			go metrics.CreateArticleOK.Inc()
-		} else {
-			go metrics.CreateArticleError.Inc()
-		}
-	}()
-
 	article := &models.Article{}
-	err = json.NewDecoder(c.Request.Body).Decode(&article)
+	err := json.NewDecoder(c.Request.Body).Decode(&article)
 	if err != nil {
 		utils.ErrorLog("unable to decode article", err)
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
@@ -90,12 +80,14 @@ func (h *articleController) Create(c *gin.Context) {
 	validate := validator.New()
 	err = validate.Struct(article)
 	if err != nil {
+		utils.ErrorLog("validate article", err)
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
 
 	id, err := h.articleService.Create(article)
 	if err != nil {
+		utils.ErrorLog("article creating by service", err)
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
 	}
@@ -103,34 +95,22 @@ func (h *articleController) Create(c *gin.Context) {
 	c.JSON(http.StatusCreated, gin.H{"id": id})
 }
 
-// @Summary Получение страницы объявлений
-// @Tags articles
-// @Accept json
-// @Produce json
-// @Param page query int true "Номер страницы"
-// @Param price query string false "Сортировка по цене (asc, desc)"
-// @Param date query string false "Сортировка по дате (asc, desc)"
-// @Success 200 {array} models.Article
-// @Failure 400 {string} string "Barticle Request"
-// @Failure 500 {string} string "Internal Server Error"
-// @Router			/article/all/ [get]
+// @Summary	Получение страницы Статей
+// @Tags		articles
+// @Accept		json
+// @Produce	json
+// @Param		page	query		int		true	"Номер страницы"
+// @Param		date	query		string	false	"Сортировка по дате (asc, desc)"
+// @Success	200		{array}		models.Article
+// @Failure	400		{string}	string	"Barticle Request"
+// @Failure	500		{string}	string	"Internal Server Error"
+// @Router		/article/all/ [get]
 func (h *articleController) GetAll(c *gin.Context) {
-	var err error
-	// собираем метрики
 	go metrics.GetArticlesRequest.Inc()
-	defer func() {
-		if err == nil {
-			go metrics.GetArticlesOK.Inc()
-		} else {
-			go metrics.GetArticlesError.Inc()
-		}
-	}()
 
 	page,
-		price,
-		date,
+		dateSorting,
 		userId := c.Query("page"),
-		c.Query("price"),
 		c.Query("date"),
 		c.Query("user_id")
 
@@ -145,7 +125,6 @@ func (h *articleController) GetAll(c *gin.Context) {
 	// проверка, что идентификатор пользователя является целочисленным значением
 	var userIdN int
 	if userId != "" {
-		// проверка, что идентификатор пользователя является целочисленным значением
 		userIdN, err = strconv.Atoi(userId)
 		if err != nil {
 			utils.ErrorLog("unable to parse user id", err)
@@ -154,29 +133,18 @@ func (h *articleController) GetAll(c *gin.Context) {
 		}
 	}
 
-	// Проверка, что параметры сортировки по цене содержат либо asc, либо desc
-	if price != "" {
-		if price == "asc" || price == "desc" {
-			price = "price " + price
-		} else {
-			utils.ErrorLog("Invalid price query parameter: "+price, types.ErrInvalidPriceSort)
-			c.JSON(http.StatusBadRequest, types.ErrInvalidPriceSort.Error())
-			return
-		}
-	}
-
 	// Проверка, что параметры сортировки по дате содержат либо asc, либо desc
-	if date != "" {
-		if date == "asc" || date == "desc" {
-			date = "date " + date
+	if dateSorting != "" {
+		if dateSorting == "asc" || dateSorting == "desc" {
+			dateSorting = "date " + dateSorting
 		} else {
-			utils.ErrorLog("Invalid date query parameter: "+date, types.ErrInvalidDateSort)
+			utils.ErrorLog("Invalid date query parameter" + dateSorting, nil)
 			c.JSON(http.StatusBadRequest, types.ErrInvalidDateSort.Error())
 			return
 		}
 	}
 
-	articlesArr, err := h.articleService.GetAll(price, date, pageN, userIdN)
+	articlesArr, err := h.articleService.GetAll(dateSorting, pageN, userIdN)
 	if err != nil {
 		utils.ErrorLog("unable to get articles", err)
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
@@ -186,26 +154,17 @@ func (h *articleController) GetAll(c *gin.Context) {
 	c.JSON(http.StatusOK, articlesArr)
 }
 
-// @Summary Получение одного объявления
-// @Tags articles
-// @Accept json
-// @Produce json
-// @Param id path int true "ID объявления"
-// @Success 200 {object} models.Article
-// @Failure 400 {string} string "Barticle Request"
-// @Failure 500 {string} string "Internal Server Error"
-// @Router			/article/{id} [get]
+// @Summary	Получение одного объявления
+// @Tags		articles
+// @Accept		json
+// @Produce	json
+// @Param		id	path		int	true	"ID объявления"
+// @Success	200	{object}	models.Article
+// @Failure	400	{string}	string	"Barticle Request"
+// @Failure	500	{string}	string	"Internal Server Error"
+// @Router		/article/{id} [get]
 func (h *articleController) GetOne(c *gin.Context) {
-	var err error
-	// собираем метрики
 	go metrics.GetArticleRequest.Inc()
-	defer func() {
-		if err == nil {
-			go metrics.GetArticleOK.Inc()
-		} else {
-			go metrics.GetArticleError.Inc()
-		}
-	}()
 
 	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
@@ -217,12 +176,6 @@ func (h *articleController) GetOne(c *gin.Context) {
 	article, err := h.articleService.GetOne(id)
 	if err != nil {
 		utils.ErrorLog("unable to get article", err)
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
-		return
-	}
-
-	if err != nil {
-		utils.ErrorLog("article marshalling", err)
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
 	}
