# articles-service/internal/controllers/auth.go
@@ -35,15 +35,15 @@ func InitAuthController(
 	return authController
 }
 
-// @Summary Аутентификация пользователя
-// @Tags auth
-// @Accept json
-// @Produce json
-// @Param user body models.User true "Почта и пароль пользователя"
-// @Success 200 {string} string "token"
-// @Failure 400 {string} string "Bad Request"
-// @Failure 500 {string} string "Internal Server Error"
-// @Router	/user/login/ [post]
+//	@Summary	Аутентификация пользователя
+//	@Tags		auth
+//	@Accept		json
+//	@Produce	json
+//	@Param		user	body		models.User	true	"Почта и пароль пользователя"
+//	@Success	200		{string}	string		"token"
+//	@Failure	400		{string}	string		"Bad Request"
+//	@Failure	500		{string}	string		"Internal Server Error"
+//	@Router		/user/login/ [post]
 func (a *authController) Login(c *gin.Context) {
 	user := &models.User{}
 	err := json.NewDecoder(c.Request.Body).Decode(&user)
@@ -68,15 +68,15 @@ func (a *authController) Login(c *gin.Context) {
 	c.JSON(http.StatusOK, gin.H{"token": res.GetToken()})
 }
 
-// @Summary Регистрация пользователя
-// @Tags auth
-// @Accept json
-// @Produce json
-// @Param user body models.User true "Почта и пароль пользователя"
-// @Success 201 {string} int "id"
-// @Failure 400 {string} string "Bad Request"
-// @Failure 500 {string} string "Internal Server Error"
-// @Router	/user/register/ [post]
+//	@Summary	Регистрация пользователя
+//	@Tags		auth
+//	@Accept		json
+//	@Produce	json
+//	@Param		user	body		models.User	true	"Почта и пароль пользователя"
+//	@Success	201		{string}	int			"id"
+//	@Failure	400		{string}	string		"Bad Request"
+//	@Failure	500		{string}	string		"Internal Server Error"
+//	@Router		/user/register/ [post]
 func (a *authController) Register(c *gin.Context) {
 	user := &models.User{}
 	err := json.NewDecoder(c.Request.Body).Decode(&user)
