# articles-service/internal/controllers/comment.go
@@ -40,15 +40,15 @@ func InitCommentController(
 	return commentController
 }
 
-// @Summary Создание комментария
-// @Tags comments
-// @Accept json
-// @Produce json
-// @Param comment body models.Comment true "Комментарий"
-// @Success 201 {int} id
-// @Failure 400 {string} string "Bad Request"
-// @Failure 500 {string} string "Internal Server Error"
-// @Router			/comments/create/ [post]
+//	@Summary	Создание комментария
+//	@Tags		comments
+//	@Accept		json
+//	@Produce	json
+//	@Param		comment	body		models.Comment	true	"Комментарий"
+//	@Success	201		{int}		id
+//	@Failure	400		{string}	string	"Bad Request"
+//	@Failure	500		{string}	string	"Internal Server Error"
+//	@Router		/comments/create/ [post]
 func (h *commentController) CreateComment(c *gin.Context) {
 	go metrics.CreateCommentRequest.Inc()
 	// проверяем наличие ошибки, возможно переданной нам через middleware
@@ -59,17 +59,8 @@ func (h *commentController) CreateComment(c *gin.Context) {
 		}
 	}
 
-	var err error
-	defer func() {
-		if err == nil {
-			go metrics.CreateCommentOK.Inc()
-		} else {
-			go metrics.CreateCommentError.Inc()
-		}
-	}()
-
 	comment := &models.Comment{}
-	err = json.NewDecoder(c.Request.Body).Decode(&comment)
+	err := json.NewDecoder(c.Request.Body).Decode(&comment)
 	if err != nil {
 		utils.ErrorLog("unable to decode comment", err)
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
@@ -102,25 +93,16 @@ func (h *commentController) CreateComment(c *gin.Context) {
 	c.JSON(http.StatusCreated, gin.H{"id": id})
 }
 
-// @Summary Получение всех комментариев статьи
-// @Tags comments
-// @Accept json
-// @Produce json
-// @Success 200 {array} models.Comment true "Комментрии"
-// @Failure 400 {string} string "Bad Request"
-// @Failure 500 {string} string "Internal Server Error"
-// @Router			/comments/{articleId}/ [get]
+//	@Summary	Получение всех комментариев статьи
+//	@Tags		comments
+//	@Accept		json
+//	@Produce	json
+//	@Success	200	{array}		models.Comment
+//	@Failure	400	{string}	string			"Bad Request"
+//	@Failure	500	{string}	string			"Internal Server Error"
+//	@Router		/comments/{articleId} [get]
 func (h *commentController) GetCommentsOnArticle(c *gin.Context) {
-	var err error
-	// собираем метрики
 	go metrics.GetCommentsRequest.Inc()
-	defer func() {
-		if err == nil {
-			go metrics.GetCommentsOK.Inc()
-		} else {
-			go metrics.GetCommentsError.Inc()
-		}
-	}()
 
 	articleId, err := strconv.Atoi(c.Param("articleId"))
 	if err != nil {
